# Codex_Gratuit

./: .gitignore  PLAN-split-codex-home.md  README.md  codex-launch.ps1  codex-openai.ps1  ollama-launch-models.json.md
Claude_Commandes/: PRESENTATION.md
Claude_Commandes/commands/: cx-free-task.md
Claude_Commandes/prompts/: relire-critique.md  relire.md
cloudzir-agent-runtime/: .gitignore  README.md  pyproject.toml
cloudzir-agent-runtime/legacy/: README.md  codex-launch.ps1  codex-openai.ps1  config.toml.md  ollama-launch-models.json.md
cloudzir-agent-runtime/legacy/Claude_Commandes/: README.md  install.ps1
cloudzir-agent-runtime/legacy/Claude_Commandes/commands/: cx-free-critique.md  cx-free-review.md  cx-free-status.md
cloudzir-agent-runtime/legacy/Claude_Commandes/scripts/: cx-free.ps1
cloudzir-agent-runtime/legacy/litellm-codex/: .env.example  litellm-models.json  start-litellm.ps1
cloudzir-agent-runtime/src/cloudzir_agent_runtime/: __init__.py  cli.py  config.py  deepseek_fix.py  litellm_callback.py  litellm_config.py  providers.py
cloudzir-agent-runtime/tests/: test_cli.py  test_deepseek_fix.py  test_litellm_config.py
litellm-codex/: codex-litellm-proxy.js  codex_deepseek_fix.py  litellm-models.json  start-litellm.ps1
user/.codex/agents/: README.md  ai-llm-engineer.toml  backend-api-reviewer.toml  code-reviewer.toml  codebase-explorer.toml  compliance-rgpd-auditor.toml  db-migration-reviewer.toml  debugger.toml  deployment-release-engineer.toml  docs-changelog-maintainer.toml  frontend-ux-reviewer.toml  integration-resilience-reviewer.toml  (+4 more)
